kubernetes/apps/media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
spec:
  ports:
    - port: 8181
  selector:
    app: tautulli
