kubernetes/apps/media/tautulli/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - tautulli.local.elmurphy.com
  rules:
    - backendRefs:
        - name: tautulli
          port: 8181
